IAM/kubernetes/overlays/production/oidc/kustomize/main-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oidc-ingress
  namespace: default
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    external-dns.alpha.kubernetes.io/hostname: oidc.vladbilii.click
    cert-manager.io/cluster-issuer: letsencrypt-oidc-prod
spec:
  ingressClassName: oidc-nginx-ingress
  rules:
    - host: oidc.vladbilii.click
      http:
        paths:
        - path: /.well-known/openid-configuration
          pathType: Exact
          backend:
            service:
              name: kubernetes
              port:
                number: 443
        - path: /openid/v1/jwks
          pathType: Exact
          backend:
            service:
              name: kubernetes
              port:
                number: 443
  tls:
    - hosts:
        - oidc.vladbilii.click
      secretName: oidc-cert
